Closed
Bug 791230
Opened 13 years ago
Closed 13 years ago
nsTextStore.cpp fails to compile on GCC (mingw)
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: jacek, Assigned: jacek)
Details
Attachments
(1 file)
|
12.76 KB,
patch
|
masayuki
:
review+
|
Details | Diff | Splinter Review |
I get errors like:
nsTextStore.cpp: In destructor ‘nsTextStore::~nsTextStore()’:
nsTextStore.cpp:352:3: error: cannot pass objects of non-trivially-copyable type ‘class nsRefPtr<ITfDocumentMgr>’ through ‘...’
nsTextStore.cpp:352:3: error: cannot pass objects of non-trivially-copyable type ‘class nsRefPtr<ITfContext>’ through ‘...’
Attachment #661202 -
Flags: review?(masayuki)
Comment 1•13 years ago
|
||
Comment on attachment 661202 [details] [diff] [review]
fix v1.0
>@@ -2473,17 +2473,17 @@ nsTextStore::OnTextChangeInternal(uint32_t aStart,
> uint32_t aOldEnd,
> uint32_t aNewEnd)
> {
> PR_LOG(sTextStoreLog, PR_LOG_DEBUG,
> ("TSF: 0x%p nsTextStore::OnTextChangeInternal(aStart=%lu, "
> "aOldEnd=%lu, aNewEnd=%lu), mLock=%s, mSink=0x%p, mSinkMask=%s, "
> "mTextChange={ acpStart=%ld, acpOldEnd=%ld, acpNewEnd=%ld }",
> this, aStart, aOldEnd, aNewEnd, GetLockFlagNameStr(mLock).get(),
>- mSink, GetSinkMaskNameStr(mSinkMask).get(), mTextChange.acpStart,
>+ mSink.get(), GetSinkMaskNameStr(mSinkMask).get(), mTextChange.acpStart,
This line is over 80 characters by your change.
Otherwise, looks okay, but please ensure that all changed lines don't become over 80 characters before landing.
And thank you very match for your work!
Attachment #661202 -
Flags: review?(masayuki) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Thanks you for so quick review! I've pushed a modified version to m-i:
https://hg.mozilla.org/integration/mozilla-inbound/rev/812b2c7c6096
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.
Description
•