Bug 791230 - nsTextStore.cpp fails to compile on GCC (mingw) r=masayuki